# SMAiAssistant

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
src/: bot.py  config.py  db_service.py  rag_service.py
src/handlers/: __init__.py  callbacks.py  commands.py  errors.py  messages.py  utils.py
